--- a/style.css
+++ b/style.css
@@ -4,14 +4,14 @@
   padding: 0px;
 }
 body {
-  background-image: url(./dahlia-flower-blue-flower-black-background-amoled-5k-5120x2880-8534.jpg);
+  background: url(./dahlia-flower-blue-flower-black-background-amoled-5k-5120x2880-8534.jpg)
+    no-repeat center center fixed;
   background-size: cover;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
   text-align: center;
-  min-height: 100vh;
 }
 .foam {
   background-color: transparent;
@@ -29,6 +29,10 @@ body {
   color: #fff;
   backdrop-filter: blur(6px);
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  margin-top: 150px;
+  @media (max-width: 720px) {
+    margin-top: 75px;
+  }
 }
 .foorter-foam {
   display: flex;
@@ -71,8 +75,9 @@ input::placeholder {
 button {
   width: 100%;
   height: 100%;
+  color: #fff;
   /* background-image: url(39619.jpg); */
-  background-color: blue;
+  background-color: rgb(44, 44, 53);
   background-size: cover;
   outline: none;
   border: none;
